# SwigDirectorTest

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/lastviking/testswig/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeRestApi.cpp  NativeRestApi.h  NativeRestApi.i
app/src/main/java/eu/lastviking/testswig/: MainActivity.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/eu/lastviking/testswig/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
